# bob-core

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
core/: __init__.py  database.py  exceptions.py  mqtt.py  time.py
tests/: common_settings_test.py  database_test.py  log_test.py  messagge_test.py  mqtt_test.py  prova_test.py  time_test.py  weatherData_test.py
