[tool.poetry]
name = "policumbent-bob-core"
version = "0.1.0.post1"
description = "BOB common files"
authors = ["Stefano Loscalzo <stefano.loscalzo@gmail.com>", "Gabriele Belluardo <gabriele.belluardo@outlook.it>"]
license = "LGPL-3.0-or-later"
packages = [
    { include = "core" },
    { include = "core/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.7.3"
paho-mqtt = "^1.6.1"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
pytest = "^6.2.5"
black = "^22.3.0"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
